testData/annotation.semantic/UcFirstClassName.hx
class <error descr="Type name must start by upper case">tes<caret>t</error> {

}